# repos

./: CMakeLists.txt
completions/: repos_completion.bash
doc/source/: repos-find.rst
libexec/repos/: git-recent.py  git-url-completion-helper.py  repos-add.py  repos-clone.py  repos-comment.py  repos-del.py  repos-find.py  repos-ignore.py  repos-server.py
share/man/man1/: repos-clone.org
share/repos/html/viewer/: repos.css  repos.html  repos.js  repos.org
spack/: README.org
spack/repos/: package.py
src/: main.go
